RESOLVED FIXED240581
[:has() pseudo-class] Invalidation fails if the mutated elements subtree has been marked invalid
https://bugs.webkit.org/show_bug.cgi?id=240581
Summary [:has() pseudo-class] Invalidation fails if the mutated elements subtree has ...
Antti Koivisto
Reported 2022-05-18 08:57:07 PDT
:has() can affect elements outside the subtree so we can't use this optimization if present.
Attachments
Patch (60.98 KB, patch)
2022-05-18 09:03 PDT, Antti Koivisto
no flags
Patch (61.07 KB, patch)
2022-05-18 09:07 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2022-05-18 09:03:24 PDT
Antti Koivisto
Comment 2 2022-05-18 09:07:17 PDT
EWS
Comment 3 2022-05-18 12:21:26 PDT
Committed r294423 (250706@main): <https://commits.webkit.org/250706@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 459544 [details].
Radar WebKit Bug Importer
Comment 4 2022-05-18 12:22:13 PDT
Note You need to log in before you can comment on or make changes to this bug.