Invalidation fails if the mutated elements subtree has been marked invalid https://bugs.webkit.org/show_bug.cgi?id=240581

Reviewed by Alan Bujtas.

:has() can affect elements outside the subtree so we can't use this optimization if it is present.

* LayoutTests/imported/w3c/web-platform-tests/css/selectors/invalidation/has-in-adjacent-position-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/selectors/invalidation/has-in-ancestor-position-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/selectors/invalidation/has-in-parent-position-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/selectors/invalidation/has-in-sibling-position-expected.txt:

* Source/WebCore/dom/Element.cpp:
(WebCore::Element::needsStyleInvalidation const):

Don't skip invalidation for a locally invalid subtree if :has() is present.
Add a new check for document element subtree being invalid (this covers some of the same cases and works with :has()).

* Source/WebCore/style/StyleScope.cpp:
(WebCore::Style::Scope::forNode):

Add const version.

* Source/WebCore/style/StyleScope.h:

Canonical link: https://commits.webkit.org/250706@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294423 268f45cc-cd09-0410-ab3c-d52691b4dbfc